--- a/src/displayPayment.form
+++ b/src/displayPayment.form
@@ -39,7 +39,9 @@
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <text value=""/>
+            </properties>
           </component>
           <component id="be31" class="javax.swing.JLabel" binding="labelContact">
             <constraints>
