--- a/src/displayPayment.form
+++ b/src/displayPayment.form
@@ -8,7 +8,7 @@
     <properties/>
     <border type="none" title=""/>
     <children>
-      <grid id="f10eb" binding="detailsPanel" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="f10eb" binding="detailsPanel" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -27,7 +27,7 @@
           </component>
           <component id="9bfed" class="javax.swing.JLabel" binding="labelNameTitle">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="231" height="16"/>
               </grid>
             </constraints>
@@ -43,29 +43,9 @@
               <text value=""/>
             </properties>
           </component>
-          <component id="be31" class="javax.swing.JLabel" binding="labelContact">
-            <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="231" height="16"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value="Contact Number: "/>
-            </properties>
-          </component>
-          <component id="ddb82" class="javax.swing.JLabel" binding="labelAddress">
-            <constraints>
-              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="231" height="16"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value="Address: "/>
-            </properties>
-          </component>
           <component id="ef135" class="javax.swing.JLabel" binding="labelCard">
             <constraints>
-              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="231" height="16"/>
               </grid>
             </constraints>
@@ -73,13 +53,13 @@
               <text value="Card Number: "/>
             </properties>
           </component>
-          <component id="3a67e" class="javax.swing.JLabel" binding="labelDisplayContact">
+          <component id="3a67e" class="javax.swing.JLabel" binding="labelDisplayEmail">
             <constraints>
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
           </component>
-          <component id="d164d" class="javax.swing.JLabel" binding="labelDisplayAddress">
+          <component id="d164d" class="javax.swing.JLabel" binding="labelDisplayContact">
             <constraints>
               <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -87,14 +67,50 @@
           </component>
           <component id="759ba" class="javax.swing.JLabel" binding="labelDisplayCard">
             <constraints>
+              <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="f9de1" class="javax.swing.JLabel" binding="labelAddress">
+            <constraints>
+              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="231" height="16"/>
+              </grid>
+            </constraints>
+            <properties>
+              <text value="Address: "/>
+            </properties>
+          </component>
+          <component id="3e604" class="javax.swing.JLabel" binding="labelDisplayAddress">
+            <constraints>
               <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
           </component>
+          <component id="be31" class="javax.swing.JLabel" binding="labelContact">
+            <constraints>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="231" height="16"/>
+              </grid>
+            </constraints>
+            <properties>
+              <text value="Contact Number: "/>
+            </properties>
+          </component>
+          <component id="ddb82" class="javax.swing.JLabel" binding="labelEmailAddress">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="231" height="16"/>
+              </grid>
+            </constraints>
+            <properties>
+              <text value="Email Address: "/>
+            </properties>
+          </component>
         </children>
       </grid>
       <grid id="3afad" binding="menuPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
+        <margin top="50" left="50" bottom="50" right="50"/>
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
