--- a/src/displayPayment.form
+++ b/src/displayPayment.form
@@ -109,7 +109,7 @@
           </component>
         </children>
       </grid>
-      <grid id="3afad" binding="menuPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="3afad" binding="menuPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="50" left="50" bottom="50" right="50"/>
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -117,13 +117,21 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="ee10e" class="javax.swing.JTable" binding="menuDisplayTable">
+          <component id="7db91" class="javax.swing.JTable" binding="menuDisplayTable">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="50"/>
               </grid>
             </constraints>
             <properties/>
+          </component>
+          <component id="cf169" class="javax.swing.JButton" binding="confirmOrderButton">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Confirm Order"/>
+            </properties>
           </component>
         </children>
       </grid>
