--- a/src/Menu.form
+++ b/src/Menu.form
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Menu">
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+    <margin top="20" left="20" bottom="20" right="20"/>
     <constraints>
       <xy x="82" y="60" width="627" height="408"/>
     </constraints>
     <properties>
+      <background color="-1197159"/>
       <enabled value="true"/>
     </properties>
     <border type="none" title-justification="2"/>
@@ -17,7 +18,9 @@
             <preferred-size width="301" height="113"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-134423"/>
+        </properties>
         <border type="etched"/>
         <children>
           <component id="aa954" class="javax.swing.JLabel" binding="labelShopName">
@@ -25,7 +28,7 @@
               <grid row="0" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <font size="22" style="1"/>
+              <font name="Ink Free" size="22" style="1"/>
               <text value="Ramly.Jr House "/>
             </properties>
           </component>
@@ -82,7 +85,7 @@
                 <children>
                   <component id="7283a" class="javax.swing.JLabel" binding="labelHotdog">
                     <constraints>
-                      <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <text value="Hotdog"/>
@@ -90,7 +93,7 @@
                   </component>
                   <component id="dc937" class="javax.swing.JLabel" binding="labelBenjo">
                     <constraints>
-                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <text value="Benjo"/>
@@ -98,7 +101,7 @@
                   </component>
                   <component id="be1f8" class="javax.swing.JLabel" binding="labelBeefBurger">
                     <constraints>
-                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <text value="Beef Burger"/>
@@ -106,7 +109,7 @@
                   </component>
                   <component id="3fb4b" class="javax.swing.JLabel" binding="labelChickenBurger">
                     <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <text value="Chicken Burger"/>
@@ -115,7 +118,7 @@
                   <component id="385f" class="javax.swing.JSpinner" binding="spinnerChickenBurger" custom-create="true">
                     <constraints>
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                        <preferred-size width="55" height="20"/>
+                        <preferred-size width="55" height="30"/>
                       </grid>
                     </constraints>
                     <properties/>
@@ -123,23 +126,23 @@
                   <component id="1844d" class="javax.swing.JSpinner" binding="spinnerBeefBurger" custom-create="true">
                     <constraints>
                       <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                        <preferred-size width="55" height="20"/>
+                        <preferred-size width="55" height="30"/>
                       </grid>
                     </constraints>
                     <properties/>
                   </component>
-                  <component id="59d4a" class="javax.swing.JSpinner" binding="spinnerBenjo">
+                  <component id="59d4a" class="javax.swing.JSpinner" binding="spinnerBenjo" custom-create="true">
                     <constraints>
                       <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                        <preferred-size width="55" height="20"/>
+                        <preferred-size width="55" height="30"/>
                       </grid>
                     </constraints>
                     <properties/>
                   </component>
-                  <component id="bcf9" class="javax.swing.JSpinner" binding="spinnerHotdog">
+                  <component id="bcf9" class="javax.swing.JSpinner" binding="spinnerHotdog" custom-create="true">
                     <constraints>
                       <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                        <preferred-size width="55" height="20"/>
+                        <preferred-size width="55" height="30"/>
                       </grid>
                     </constraints>
                     <properties/>
@@ -156,7 +159,7 @@
                 <children>
                   <component id="a2b72" class="javax.swing.JLabel" binding="labelFanta">
                     <constraints>
-                      <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <text value="Fanta"/>
@@ -164,7 +167,7 @@
                   </component>
                   <component id="70a4c" class="javax.swing.JLabel" binding="labelSprite">
                     <constraints>
-                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <text value="Sprite"/>
@@ -172,7 +175,7 @@
                   </component>
                   <component id="dc057" class="javax.swing.JLabel" binding="label100Plus">
                     <constraints>
-                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <text value="100 Plus"/>
@@ -180,7 +183,7 @@
                   </component>
                   <component id="e0ff6" class="javax.swing.JLabel" binding="labelCoke">
                     <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <text value="Coke"/>
@@ -230,7 +233,7 @@
                 <children>
                   <component id="ba7eb" class="javax.swing.JLabel" binding="labelWedges">
                     <constraints>
-                      <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <text value="Wedges"/>
@@ -238,7 +241,7 @@
                   </component>
                   <component id="90f0f" class="javax.swing.JLabel" binding="labelNuggets">
                     <constraints>
-                      <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <text value="Nuggets"/>
@@ -246,7 +249,7 @@
                   </component>
                   <component id="902df" class="javax.swing.JLabel" binding="labelCurlyFries">
                     <constraints>
-                      <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <text value="Curly Fries"/>
@@ -254,7 +257,7 @@
                   </component>
                   <component id="a1ca0" class="javax.swing.JLabel" binding="labelSquidRings">
                     <constraints>
-                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <text value="Squid Rings"/>
@@ -262,7 +265,7 @@
                   </component>
                   <component id="3e3f" class="javax.swing.JLabel" binding="labelOnionRings">
                     <constraints>
-                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <text value="Onion Rings"/>
@@ -270,7 +273,7 @@
                   </component>
                   <component id="c340f" class="javax.swing.JLabel" binding="labelFries">
                     <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <text value="Fries"/>
@@ -361,12 +364,14 @@
           </component>
         </children>
       </grid>
-      <grid id="5f3eb" binding="panelTotal" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="5f3eb" binding="panelTotal" layout-manager="GridLayoutManager" row-count="2" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1197159"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="f625d" class="javax.swing.JLabel" binding="labelTotal">
@@ -380,31 +385,44 @@
           </component>
           <component id="b8d25" class="javax.swing.JTextField" binding="textFieldTotal">
             <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
+              <grid row="0" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
             <properties/>
           </component>
-          <component id="62a60" class="javax.swing.JButton" binding="orderButton" default-binding="true">
+          <hspacer id="5e919">
             <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties>
-              <text value="Order"/>
-            </properties>
-          </component>
+          </hspacer>
           <component id="612b5" class="javax.swing.JButton" binding="backButton" default-binding="true">
             <constraints>
-              <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Back"/>
             </properties>
           </component>
-          <hspacer id="5e919">
+          <component id="62a60" class="javax.swing.JButton" binding="orderButton" default-binding="true">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Order"/>
+            </properties>
+          </component>
+          <component id="ce78d" class="javax.swing.JButton" binding="buttonReset">
+            <constraints>
+              <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Reset"/>
+            </properties>
+          </component>
+          <hspacer id="6bf4a">
+            <constraints>
+              <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
           </hspacer>
         </children>
