--- a/src/PaymentMethod.form
+++ b/src/PaymentMethod.form
@@ -39,15 +39,13 @@
           <text value="Please insert Card Number"/>
         </properties>
       </component>
-      <component id="3e06d" class="javax.swing.JTextField" binding="cardNumber">
+      <component id="3e06d" class="javax.swing.JTextField" binding="cardNumber" custom-create="true">
         <constraints>
           <grid row="3" column="3" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties>
-          <columns value="16"/>
-        </properties>
+        <properties/>
       </component>
       <component id="922b6" class="javax.swing.JComboBox" binding="cardChoice" custom-create="true">
         <constraints>
