--- a/src/PaymentMethod.form
+++ b/src/PaymentMethod.form
@@ -39,7 +39,7 @@
           <text value="Please insert Card Number"/>
         </properties>
       </component>
-      <component id="3e06d" class="javax.swing.JTextField" binding="cardNumber" custom-create="true">
+      <component id="3e06d" class="javax.swing.JTextField" binding="textFieldCardNumber" custom-create="true">
         <constraints>
           <grid row="3" column="3" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -47,7 +47,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="922b6" class="javax.swing.JComboBox" binding="cardChoice" custom-create="true">
+      <component id="922b6" class="javax.swing.JComboBox" binding="comboBoxCardChoice" custom-create="true">
         <constraints>
           <grid row="2" column="3" row-span="1" col-span="5" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
