--- a/src/DisplayPayment.form
+++ b/src/DisplayPayment.form
@@ -117,13 +117,16 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="7db91" class="javax.swing.JTable" binding="menuDisplayTable">
+          <component id="7db91" class="javax.swing.JTable" binding="menuDisplayTable" custom-create="true">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="50"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <showHorizontalLines value="false"/>
+              <showVerticalLines value="false"/>
+            </properties>
           </component>
           <component id="cf169" class="javax.swing.JButton" binding="confirmOrderButton">
             <constraints>
