--- a/src/PaymentMethod.form
+++ b/src/PaymentMethod.form
@@ -45,7 +45,9 @@
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <text value=""/>
+        </properties>
       </component>
       <component id="922b6" class="javax.swing.JComboBox" binding="comboBoxCardChoice" custom-create="true">
         <constraints>
