--- a/src/DisplayPayment.form
+++ b/src/DisplayPayment.form
@@ -124,6 +124,7 @@
               </grid>
             </constraints>
             <properties>
+              <focusable value="false"/>
               <showHorizontalLines value="false"/>
               <showVerticalLines value="false"/>
             </properties>
