--- a/src/DisplayPayment.form
+++ b/src/DisplayPayment.form
@@ -5,15 +5,19 @@
     <constraints>
       <xy x="20" y="23" width="582" height="494"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-1197159"/>
+    </properties>
     <border type="none" title=""/>
     <children>
       <grid id="f10eb" binding="detailsPanel" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="1" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1197159"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="3ba20" class="javax.swing.JLabel" binding="titleLabel">
@@ -27,7 +31,7 @@
           </component>
           <component id="9bfed" class="javax.swing.JLabel" binding="labelNameTitle">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="1" use-parent-layout="false">
                 <preferred-size width="231" height="16"/>
               </grid>
             </constraints>
@@ -45,7 +49,7 @@
           </component>
           <component id="ef135" class="javax.swing.JLabel" binding="labelCard">
             <constraints>
-              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="1" use-parent-layout="false">
                 <preferred-size width="231" height="16"/>
               </grid>
             </constraints>
@@ -73,7 +77,7 @@
           </component>
           <component id="f9de1" class="javax.swing.JLabel" binding="labelAddress">
             <constraints>
-              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="1" use-parent-layout="false">
                 <preferred-size width="231" height="16"/>
               </grid>
             </constraints>
@@ -89,7 +93,7 @@
           </component>
           <component id="be31" class="javax.swing.JLabel" binding="labelContact">
             <constraints>
-              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="1" use-parent-layout="false">
                 <preferred-size width="231" height="16"/>
               </grid>
             </constraints>
@@ -99,7 +103,7 @@
           </component>
           <component id="ddb82" class="javax.swing.JLabel" binding="labelEmailAddress">
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="1" use-parent-layout="false">
                 <preferred-size width="231" height="16"/>
               </grid>
             </constraints>
@@ -114,7 +118,9 @@
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1197159"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="7db91" class="javax.swing.JTable" binding="menuDisplayTable" custom-create="true">
