--- a/src/PaymentMethod.form
+++ b/src/PaymentMethod.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="548" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-1197159"/>
+    </properties>
     <border type="none"/>
     <children>
       <vspacer id="3a474">
@@ -25,7 +27,7 @@
       </hspacer>
       <component id="c116" class="javax.swing.JLabel" binding="cardChoicesLabel">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Please pick a Card Type"/>
@@ -33,7 +35,7 @@
       </component>
       <component id="3bd1" class="javax.swing.JLabel" binding="cardNumberLabel">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Please insert Card Number"/>
@@ -90,7 +92,7 @@
       </vspacer>
       <component id="d6ceb" class="javax.swing.JLabel" binding="titleLabel">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false">
             <preferred-size width="106" height="34"/>
           </grid>
         </constraints>
