--- a/src/Menu.form
+++ b/src/Menu.form
@@ -28,7 +28,7 @@
               <grid row="0" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <font size="22" style="1"/>
+              <font name="Ink Free" size="22" style="1"/>
               <text value="Ramly.Jr House "/>
             </properties>
           </component>
