added user rating into the system but got a bug. Adjusted the name of register and also adjusted the size of the table

--- a/src/Register.form
+++ b/src/Register.form
@@ -38,7 +38,7 @@
         <properties>
           <background color="-1197159"/>
           <font size="28" style="1"/>
-          <text value="Registration Form"/>
+          <text value="Register to Order"/>
         </properties>
       </component>
       <vspacer id="a96a4">
