--- a/src/DisplayPayment.form
+++ b/src/DisplayPayment.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="50" left="50" bottom="50" right="50"/>
     <constraints>
-      <xy x="20" y="20" width="657" height="508"/>
+      <xy x="20" y="20" width="668" height="508"/>
     </constraints>
     <properties>
       <background color="-1197159"/>
@@ -93,11 +93,13 @@
         </children>
       </grid>
       <grid id="bde82" binding="menuPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
+        <margin top="0" left="200" bottom="0" right="200"/>
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="1" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1197159"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="1f335" class="javax.swing.JTable" binding="menuDisplayTable" custom-create="true">
@@ -106,7 +108,9 @@
                 <preferred-size width="150" height="50"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <focusable value="false"/>
+            </properties>
           </component>
         </children>
       </grid>
@@ -117,6 +121,7 @@
         </constraints>
         <properties>
           <background color="-1197159"/>
+          <enabled value="true"/>
         </properties>
         <border type="none"/>
         <children>
