--- a/src/Menu.form
+++ b/src/Menu.form
@@ -394,7 +394,9 @@
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <editable value="false"/>
+            </properties>
           </component>
           <hspacer id="5e919">
             <constraints>
